Gtk-3.20&3.22&4.0: [Gedit] Fix unwanted label shifting in left-pane header

--- a/gtk/sass/4.0/_misc.scss
+++ b/gtk/sass/4.0/_misc.scss
@@ -885,10 +885,15 @@ $fake-shadow-dark: linear-gradient(to bottom, rgba(0, 0, 0, 0.20),
 paned.titlebar.horizontal {
   headerbar {
     button.flat.toggle.popup:not(.image-button) { // left-pane header button
+      padding-top: rem(($widget_size - $icon_size - 4px) / 2);
+      padding-bottom: rem(($widget_size - $icon_size - 1.3px) / 2);
       border-radius: 2px;
       -gtk-outline-radius: 2px;
 
-      box > .title { color: $inverted_secondary_fg_color; }
+      box > .title {
+        margin-bottom: 0; // reset bottom-margin
+        color: $inverted_secondary_fg_color;
+      }
 
       &:hover,
       &:active,
